Fix execution counts and update JSON parsing output in Google.com example

--- a/examples/google.ipynb
+++ b/examples/google.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cell-1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "from playwright.async_api import async_playwright\n",
     "from weblite.adapters.playwright import PlaywrightPage, PlaywrightElement\n",
     "from weblite import parse\n",
-    "from weblite.utils import compact_json"
+    "from weblite.utils import to_compact_json"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cell-6",
    "metadata": {},
    "outputs": [
@@ -86,125 +86,74 @@
      "text": [
       "Parse result:\n",
       "{\n",
-      "  \"body\": [\n",
-      "    {\n",
-      "      \"div\": [\n",
-      "        {\n",
-      "          \"div\": [\n",
-      "            {\"a\": \"About\"},\n",
-      "            {\"a\": \"Store\"},\n",
-      "            {\n",
-      "              \"header\": [\n",
-      "                {\n",
-      "                  \"div\": [\n",
-      "                    {\"a\": \"Gmail\"},\n",
-      "                    {\"a\": \"Images\"}\n",
-      "                  ]\n",
-      "                },\n",
-      "                {\n",
-      "                  \"a\": [\n",
-      "                    {\n",
-      "                      \"svg\": [\n",
-      "                        {\"path\": \"\"},\n",
-      "                        {\"image\": \"\"}\n",
-      "                      ]\n",
-      "                    }\n",
-      "                  ]\n",
-      "                },\n",
-      "                {\n",
-      "                  \"a\": [\n",
-      "                    {\"span\": \"Sign in\"}\n",
-      "                  ]\n",
-      "                }\n",
-      "              ]\n",
-      "            }\n",
-      "          ]\n",
-      "        },\n",
-      "        {\n",
-      "          \"svg\": [\n",
-      "            {\"path\": \"\"},\n",
-      "            {\"path\": \"\"},\n",
-      "            {\"path\": \"\"},\n",
-      "            {\"path\": \"\"},\n",
-      "            {\"path\": \"\"},\n",
-      "            {\"path\": \"\"}\n",
-      "          ]\n",
-      "        },\n",
-      "        {\n",
-      "          \"form\": [\n",
-      "            {\n",
-      "              \"div\": [\n",
-      "                {\n",
-      "                  \"div\": [\n",
-      "                    {\n",
-      "                      \"svg\": [\n",
-      "                        {\"path\": \"\"}\n",
-      "                      ]\n",
-      "                    },\n",
-      "                    {\"textarea\": \"\"},\n",
-      "                    {\n",
-      "                      \"div\": [\n",
-      "                        {\"div\": \"\"},\n",
-      "                        {\n",
-      "                          \"div\": [\n",
-      "                            {\n",
-      "                              \"svg\": [\n",
-      "                                {\"path\": \"\"}\n",
-      "                              ]\n",
-      "                            },\n",
-      "                            {\n",
-      "                              \"svg\": [\n",
-      "                                {\"path\": \"\"}\n",
-      "                              ]\n",
-      "                            }\n",
-      "                          ]\n",
-      "                        }\n",
-      "                      ]\n",
-      "                    }\n",
-      "                  ]\n",
-      "                },\n",
-      "                {\n",
-      "                  \"center\": [\n",
-      "                    {\"input\": \"\"},\n",
-      "                    {\"input\": \"\"}\n",
-      "                  ]\n",
-      "                }\n",
-      "              ]\n",
-      "            }\n",
-      "          ]\n",
-      "        },\n",
-      "        {\"div\": \"\"},\n",
-      "        {\n",
-      "          \"div\": [\n",
-      "            {\n",
-      "              \"div\": [\n",
-      "                {\"a\": \"Advertising\"},\n",
-      "                {\"a\": \"Business\"},\n",
-      "                {\"a\": \"How Search works\"}\n",
-      "              ]\n",
-      "            },\n",
-      "            {\n",
-      "              \"a\": [\n",
-      "                {\"img\": \"\"},\n",
-      "                {\"span\": \"Applying AI towards science and the environment\"}\n",
-      "              ]\n",
-      "            },\n",
-      "            {\n",
-      "              \"div\": [\n",
-      "                {\"a\": \"Privacy\"},\n",
-      "                {\"a\": \"Terms\"},\n",
-      "                {\n",
-      "                  \"g-popup\": [\n",
-      "                    {\"div\": \"Settings\"}\n",
-      "                  ]\n",
-      "                }\n",
-      "              ]\n",
-      "            }\n",
-      "          ]\n",
-      "        }\n",
+      " \"body\": {\n",
+      "  \"div\": [\n",
+      "   {\n",
+      "    \"div\": [\n",
+      "     {\"a\": \"About\"},\n",
+      "     {\"a\": \"Store\"},\n",
+      "     {\n",
+      "      \"header\": [\n",
+      "       {\n",
+      "        \"div\": [\n",
+      "         {\"a\": \"Gmail\"},\n",
+      "         {\"a\": \"Images\"}\n",
+      "        ]\n",
+      "       },\n",
+      "       {\n",
+      "        \"a\": {\"span\": \"Sign in\"}\n",
+      "       }\n",
       "      ]\n",
+      "     }\n",
+      "    ]\n",
+      "   },\n",
+      "   {\n",
+      "    \"a\": {\n",
+      "     \"picture\": {\"img\": \"@alt=WNBA Playoffs 2025\"}\n",
       "    }\n",
+      "   },\n",
+      "   {\n",
+      "    \"form\": {\n",
+      "     \"div\": [\n",
+      "      {\"textarea\": \"\"},\n",
+      "      {\n",
+      "       \"center\": [\n",
+      "        {\"input\": \"@value=Google Search\"},\n",
+      "        {\"input\": \"@value=I'm Feeling Lucky\"}\n",
+      "       ]\n",
+      "      }\n",
+      "     ]\n",
+      "    }\n",
+      "   },\n",
+      "   {\n",
+      "    \"div\": [\n",
+      "     {\n",
+      "      \"div\": [\n",
+      "       {\"a\": \"Advertising\"},\n",
+      "       {\"a\": \"Business\"},\n",
+      "       {\"a\": \"How Search works\"}\n",
+      "      ]\n",
+      "     },\n",
+      "     {\n",
+      "      \"a\": {\"span\": \"Applying AI towards science and the environment\"}\n",
+      "     },\n",
+      "     {\n",
+      "      \"div\": [\n",
+      "       {\"a\": \"Privacy\"},\n",
+      "       {\"a\": \"Terms\"},\n",
+      "       {\n",
+      "        \"span\": {\n",
+      "         \"span\": {\n",
+      "          \"g-popup\": {\"div\": \"Settings\"}\n",
+      "         }\n",
+      "        }\n",
+      "       }\n",
+      "      ]\n",
+      "     }\n",
+      "    ]\n",
+      "   }\n",
       "  ]\n",
+      " }\n",
       "}\n"
      ]
     }
@@ -214,7 +163,7 @@
     "result = await parse(web_page)\n",
     "\n",
     "print(\"Parse result:\")\n",
-    "print(compact_json(result))"
+    "print(to_compact_json(result))"
    ]
   },
   {
