Move async operations to adapter classes (v0.2.0)
Major architectural change: Move all async web interaction logic from core
elements to adapter classes (SourceElement/SourcePage). This separates
concerns between web automation and element representation, making the
core element system synchronous and adapter-specific async operations
contained in their respective adapter implementations.

- New SourceElement/SourcePage base classes handle async web operations
- Core Element classes remain synchronous for clean separation
- PlaywrightPage/PlaywrightElement now extend new adapter base classes
- Simplified API: to_weblite() method replaces complex parse() function
- Updated examples and documentation for new architecture
- Bump version to 0.2.0

--- a/examples/google.ipynb
+++ b/examples/google.ipynb
@@ -22,8 +22,7 @@
     "sys.path.insert(0, os.path.join(os.path.dirname(os.getcwd()), 'src'))\n",
     "\n",
     "from playwright.async_api import async_playwright\n",
-    "from weblite.adapters.playwright import PlaywrightPage, PlaywrightElement\n",
-    "from weblite import parse\n",
+    "from weblite import PlaywrightPage, PlaywrightElement\n",
     "from weblite.utils import to_compact_json"
    ]
   },
@@ -77,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cell-6",
+   "id": "cell-4",
    "metadata": {},
    "outputs": [
     {
@@ -159,17 +158,22 @@
     }
    ],
    "source": [
-    "# Parse the page\n",
-    "result = await parse(web_page)\n",
+    "# Convert to weblite format using new 0.2.0 API\n",
+    "element = await web_page.to_weblite()\n",
     "\n",
-    "print(\"Parse result:\")\n",
-    "print(to_compact_json(result))"
+    "if element:\n",
+    "    # Get the simplified representation\n",
+    "    result = element.to_dict(collapse_wrappers=True)\n",
+    "    print(\"Parse result:\")\n",
+    "    print(to_compact_json(result))\n",
+    "else:\n",
+    "    print(\"No visible content found\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cell-7",
+   "id": "cell-5",
    "metadata": {},
    "outputs": [
     {
