--- a/examples/simple_html.ipynb
+++ b/examples/simple_html.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cell-1",
    "metadata": {},
    "outputs": [],
@@ -22,15 +22,14 @@
     "sys.path.insert(0, os.path.join(os.path.dirname(os.getcwd()), 'src'))\n",
     "\n",
     "from playwright.async_api import async_playwright\n",
-    "from weblite.adapters.playwright import PlaywrightPage\n",
-    "from weblite import parse\n",
-    "from weblite.utils import compact_json"
+    "from weblite import PlaywrightPage\n",
+    "from weblite.utils.formatting import to_compact_json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "08qeo58lr0ij",
+   "id": "cell-2",
    "metadata": {},
    "outputs": [
     {
@@ -64,9 +63,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "234oi3she5j",
+   "id": "cell-3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTML loaded into browser\n"
+     ]
+    }
+   ],
    "source": [
     "playwright_ctx = await async_playwright().start()\n",
     "browser = await playwright_ctx.chromium.launch(headless=True)\n",
@@ -78,13 +85,13 @@
     "# Wrap in our interface\n",
     "web_page = PlaywrightPage(page)\n",
     "\n",
-    "# Don't close browser yet - we'll debug first"
+    "print(\"HTML loaded into browser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0wsvkh0muvkk",
+   "execution_count": 4,
+   "id": "cell-4",
    "metadata": {},
    "outputs": [
     {
@@ -93,53 +100,113 @@
      "text": [
       "Parse result:\n",
       "{\n",
-      "  \"body\": [\n",
-      "    {\"h1\": \"Welcome\"},\n",
-      "    {\"p\": \"This is a simple test page.\"},\n",
+      " \"body\": [\n",
+      "  {\"h1\": \"Welcome\"},\n",
+      "  {\"p\": \"This is a simple test page.\"},\n",
+      "  {\n",
+      "   \"div\": [\n",
+      "    {\"label\": \"Name:\"},\n",
+      "    {\"input\": \"@placeholder=Enter your name\"},\n",
+      "    {\"label\": \"Email:\"},\n",
+      "    {\"input\": \"@value=test@example.com\"},\n",
+      "    {\"button\": \"Submit\"}\n",
+      "   ]\n",
+      "  },\n",
+      "  {\n",
+      "   \"div\": [\n",
       "    {\n",
-      "      \"div\": [\n",
-      "        {\"label\": \"Name:\"},\n",
-      "        {\"input\": \"\"},\n",
-      "        {\"label\": \"Email:\"},\n",
-      "        {\"input\": \"\"},\n",
-      "        {\"button\": \"Submit\"}\n",
-      "      ]\n",
+      "     \"div\": [\n",
+      "      {\"h3\": \"Product 1\"},\n",
+      "      {\"p\": \"$29.99\"},\n",
+      "      {\"button\": \"Buy Now\"}\n",
+      "     ]\n",
       "    },\n",
       "    {\n",
-      "      \"div\": [\n",
-      "        {\n",
-      "          \"div\": [\n",
-      "            {\"h3\": \"Product 1\"},\n",
-      "            {\"p\": \"$29.99\"},\n",
-      "            {\"button\": \"Buy Now\"}\n",
-      "          ]\n",
-      "        },\n",
-      "        {\n",
-      "          \"div\": [\n",
-      "            {\"h3\": \"Product 2\"},\n",
-      "            {\"p\": \"$39.99\"},\n",
-      "            {\"button\": \"Buy Now\"}\n",
-      "          ]\n",
-      "        }\n",
-      "      ]\n",
+      "     \"div\": [\n",
+      "      {\"h3\": \"Product 2\"},\n",
+      "      {\"p\": \"$39.99\"},\n",
+      "      {\"button\": \"Buy Now\"}\n",
+      "     ]\n",
       "    }\n",
-      "  ]\n",
+      "   ]\n",
+      "  }\n",
+      " ]\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "# Parse the page\n",
-    "result = await parse(web_page)\n",
+    "# Convert to weblite format using new 0.2.0 API\n",
+    "element = await web_page.to_weblite()\n",
     "\n",
-    "print(\"Parse result:\")\n",
-    "print(compact_json(result))"
+    "if element:\n",
+    "    # Get the simplified representation\n",
+    "    result = element.to_dict(collapse_wrappers=True)\n",
+    "    print(\"Parse result:\")\n",
+    "    print(to_compact_json(result))\n",
+    "else:\n",
+    "    print(\"No visible content found\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2uolzdoqjli",
+   "id": "cell-5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full structure (no wrapper collapsing):\n",
+      "{\n",
+      " \"body\": [\n",
+      "  {\"h1\": \"Welcome\"},\n",
+      "  {\"p\": \"This is a simple test page.\"},\n",
+      "  {\n",
+      "   \"div\": [\n",
+      "    {\"label\": \"Name:\"},\n",
+      "    {\"input\": \"@placeholder=Enter your name\"},\n",
+      "    {\"label\": \"Email:\"},\n",
+      "    {\"input\": \"@value=test@example.com\"},\n",
+      "    {\"button\": \"Submit\"}\n",
+      "   ]\n",
+      "  },\n",
+      "  {\n",
+      "   \"div\": [\n",
+      "    {\n",
+      "     \"div\": [\n",
+      "      {\"h3\": \"Product 1\"},\n",
+      "      {\"p\": \"$29.99\"},\n",
+      "      {\"button\": \"Buy Now\"}\n",
+      "     ]\n",
+      "    },\n",
+      "    {\n",
+      "     \"div\": [\n",
+      "      {\"h3\": \"Product 2\"},\n",
+      "      {\"p\": \"$39.99\"},\n",
+      "      {\"button\": \"Buy Now\"}\n",
+      "     ]\n",
+      "    }\n",
+      "   ]\n",
+      "  }\n",
+      " ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Try without collapsing wrappers\n",
+    "if element:\n",
+    "    result_full = element.to_dict(collapse_wrappers=False)\n",
+    "    print(\"Full structure (no wrapper collapsing):\")\n",
+    "    print(to_compact_json(result_full))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cell-6",
    "metadata": {},
    "outputs": [
     {
@@ -155,16 +222,6 @@
     "await browser.close()\n",
     "await playwright_ctx.stop()\n",
     "print(\"Browser closed!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ba84c0cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "await browser.close()"
    ]
   }
  ],
