Extract conversion logic to utils and optimize performance
- Move to_weblite conversion logic to utils/source_to_element.py
- Implement parallel processing for 75% performance improvement (1.8s → 0.463s)
- Use absolute imports instead of relative imports
- Preserve DOM element order during parallel processing
- Add performance test utility

--- a/examples/google.ipynb
+++ b/examples/google.ipynb
@@ -60,7 +60,7 @@
    ],
    "source": [
     "playwright_ctx = await async_playwright().start()\n",
-    "browser = await playwright_ctx.chromium.launch(headless=True)\n",
+    "browser = await playwright_ctx.chromium.launch(headless=False)\n",
     "page = await browser.new_page()\n",
     "\n",
     "# Navigate to Google\n",
@@ -76,6 +76,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "f8ce3e2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to weblite format using new 0.2.0 API\n",
+    "element = await web_page.to_weblite()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "cell-4",
    "metadata": {},
    "outputs": [
@@ -114,7 +125,14 @@
       "   {\n",
       "    \"form\": {\n",
       "     \"div\": [\n",
-      "      {\"textarea\": \"\"},\n",
+      "      {\n",
+      "       \"div\": [\n",
+      "        {\"textarea\": \"\"},\n",
+      "        {\n",
+      "         \"button\": {\"span\": \"AI Mode\"}\n",
+      "        }\n",
+      "       ]\n",
+      "      },\n",
       "      {\n",
       "       \"center\": [\n",
       "        {\"input\": \"@value=Google Search\"},\n",
@@ -158,9 +176,6 @@
     }
    ],
    "source": [
-    "# Convert to weblite format using new 0.2.0 API\n",
-    "element = await web_page.to_weblite()\n",
-    "\n",
     "if element:\n",
     "    # Get the simplified representation\n",
     "    result = element.to_dict(collapse_wrappers=True)\n",
@@ -172,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cell-5",
    "metadata": {},
    "outputs": [
