Replace all relative imports with absolute imports
- Convert all relative imports (.. and .) to absolute imports using weblite prefix
- Improve code clarity and maintainability
- Ensure imports work consistently across the codebase
- All functionality tested and working correctly

--- a/examples/google.ipynb
+++ b/examples/google.ipynb
@@ -60,7 +60,7 @@
    ],
    "source": [
     "playwright_ctx = await async_playwright().start()\n",
-    "browser = await playwright_ctx.chromium.launch(headless=False)\n",
+    "browser = await playwright_ctx.chromium.launch(headless=True)\n",
     "page = await browser.new_page()\n",
     "\n",
     "# Navigate to Google\n",
@@ -125,14 +125,7 @@
       "   {\n",
       "    \"form\": {\n",
       "     \"div\": [\n",
-      "      {\n",
-      "       \"div\": [\n",
-      "        {\"textarea\": \"\"},\n",
-      "        {\n",
-      "         \"button\": {\"span\": \"AI Mode\"}\n",
-      "        }\n",
-      "       ]\n",
-      "      },\n",
+      "      {\"textarea\": \"\"},\n",
       "      {\n",
       "       \"center\": [\n",
       "        {\"input\": \"@value=Google Search\"},\n",
